--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -7,6 +7,7 @@
 @import "./layout/footer";
 @import "./pages/home";
 @import "./pages/nous-connaitre";
+@import "./pages/vos-droits";
 @import "./pages/outils";
 @import "./pages/faq";
 @import "./pages/nous-contacter";
