--- a/assets/css/_settings.scss
+++ b/assets/css/_settings.scss
@@ -41,6 +41,11 @@ $whiteOverlay: rgba(255, 255, 255, 0.2);
 $whiteBg: rgba(255, 255, 255, 0.8);
 $degrade: linear-gradient(135deg, #b80000, #8b0000);
 $degrade2: linear-gradient(135deg, rgba(184, 0, 0, 0.7), rgba(139, 0, 0, 0.7));
+$degrade3: linear-gradient(
+  135deg,
+  rgba(184, 0, 0, 0.85),
+  rgba(139, 0, 0, 0.85)
+);
 
 //general
 
