--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1029,6 +1029,16 @@ footer .footer-copyright .heart {
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
 }
+@media screen and (max-width: 1000px) {
+  #nous-connaitre #nos-services-aux-adherents .services-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 630px) {
+  #nous-connaitre #nos-services-aux-adherents .services-container {
+    grid-template-columns: 1fr;
+  }
+}
 #nous-connaitre #nos-services-aux-adherents .services-container .service {
   border: 3px solid #8b0000;
   padding: 20px;
@@ -1113,6 +1123,16 @@ footer .footer-copyright .heart {
   gap: 20px;
   margin-top: 30px;
 }
+@media screen and (max-width: 1000px) {
+  #nous-connaitre #nos-revendications .revendications-div .revendication-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 630px) {
+  #nous-connaitre #nos-revendications .revendications-div .revendication-container {
+    grid-template-columns: 1fr;
+  }
+}
 #nous-connaitre #nos-revendications .revendications-div .revendication-container .revendication {
   padding: 20px;
   border: 3px solid #fff;
@@ -1141,6 +1161,16 @@ footer .footer-copyright .heart {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
+}
+@media screen and (max-width: 1000px) {
+  #nous-connaitre #nos-valeurs .valeurs-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 630px) {
+  #nous-connaitre #nos-valeurs .valeurs-container {
+    grid-template-columns: 1fr;
+  }
 }
 #nous-connaitre #nos-valeurs .valeurs-container .valeur {
   border: 3px solid #8b0000;
@@ -1226,6 +1256,11 @@ footer .footer-copyright .heart {
   gap: 50px;
   margin-top: 30px;
 }
+@media screen and (max-width: 1000px) {
+  #nous-connaitre #notre-fonctionnement .fonctionnement-div .fonctionnement-container {
+    grid-template-columns: 1fr;
+  }
+}
 #nous-connaitre #notre-fonctionnement .fonctionnement-div .fonctionnement-container .fonctionnement-item {
   padding: 20px;
   border: 3px solid #fff;
@@ -1242,6 +1277,11 @@ footer .footer-copyright .heart {
 }
 #nous-connaitre #notre-fonctionnement .fonctionnement-div .fonctionnement-container .fonctionnement-item:first-of-type {
   margin-left: 30px;
+}
+@media screen and (max-width: 1000px) {
+  #nous-connaitre #notre-fonctionnement .fonctionnement-div .fonctionnement-container .fonctionnement-item:first-of-type {
+    margin: 0;
+  }
 }
 #nous-connaitre #notre-fonctionnement .fonctionnement-div .fonctionnement-container .fonctionnement-item i {
   background: #fff;
@@ -1346,6 +1386,16 @@ footer .footer-copyright .heart {
   gap: 20px;
   margin-top: 30px;
 }
+@media screen and (max-width: 1000px) {
+  #vos-droits #droits-adherent .droits-div .droits-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 630px) {
+  #vos-droits #droits-adherent .droits-div .droits-container {
+    grid-template-columns: 1fr;
+  }
+}
 #vos-droits #droits-adherent .droits-div .droits-container .droit {
   padding: 20px;
   border: 3px solid #fff;
@@ -1374,6 +1424,11 @@ footer .footer-copyright .heart {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+}
+@media screen and (max-width: 1000px) {
+  #vos-droits #protection-juridique .protection-container {
+    grid-template-columns: 1fr;
+  }
 }
 #vos-droits #protection-juridique .protection-container .protection {
   border: 3px solid #8b0000;
@@ -1459,6 +1514,11 @@ footer .footer-copyright .heart {
   gap: 50px;
   margin-top: 30px;
 }
+@media screen and (max-width: 1000px) {
+  #vos-droits #formation-syndicale .formation-div .formation-container {
+    grid-template-columns: 1fr;
+  }
+}
 #vos-droits #formation-syndicale .formation-div .formation-container .formation-item {
   padding: 20px;
   border: 3px solid #fff;
@@ -1473,8 +1533,18 @@ footer .footer-copyright .heart {
       -ms-flex-align: center;
           align-items: center;
 }
+@media screen and (max-width: 1000px) {
+  #vos-droits #formation-syndicale .formation-div .formation-container .formation-item {
+    width: 100%;
+  }
+}
 #vos-droits #formation-syndicale .formation-div .formation-container .formation-item:first-of-type {
   margin-left: 30px;
+}
+@media screen and (max-width: 1000px) {
+  #vos-droits #formation-syndicale .formation-div .formation-container .formation-item:first-of-type {
+    margin: 0;
+  }
 }
 #vos-droits #formation-syndicale .formation-div .formation-container .formation-item i {
   background: #fff;
@@ -1508,6 +1578,11 @@ footer .footer-copyright .heart {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+}
+@media screen and (max-width: 1000px) {
+  #vos-droits #soutien-specifique .soutien-container {
+    grid-template-columns: 1fr;
+  }
 }
 #vos-droits #soutien-specifique .soutien-container .soutien {
   border: 3px solid #8b0000;
@@ -1572,6 +1647,11 @@ footer .footer-copyright .heart {
   grid-template-columns: 20% 80%;
   gap: 20px;
 }
+@media screen and (max-width: 850px) {
+  #outils #menu-outils {
+    grid-template-columns: 1fr;
+  }
+}
 #outils #menu-outils .left-bar-outils ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1590,6 +1670,25 @@ footer .footer-copyright .heart {
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
 }
+@media screen and (max-width: 850px) {
+  #outils #menu-outils .left-bar-outils ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+  }
+}
+@media screen and (max-width: 750px) {
+  #outils #menu-outils .left-bar-outils ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 #outils #menu-outils .left-bar-outils ul li {
   width: 100%;
   margin: 0 auto;
@@ -1602,11 +1701,42 @@ footer .footer-copyright .heart {
   font-size: 0.9rem;
   cursor: url(../img/cursor-hover.ico), pointer;
 }
+@media screen and (max-width: 850px) {
+  #outils #menu-outils .left-bar-outils ul li {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (max-width: 750px) {
+  #outils #menu-outils .left-bar-outils ul li {
+    padding: 10px;
+  }
+}
 #outils #menu-outils .left-bar-outils ul li:first-of-type {
   border-radius: 10px 10px 0 0;
 }
+@media screen and (max-width: 850px) {
+  #outils #menu-outils .left-bar-outils ul li:first-of-type {
+    border-radius: 10px 0 0 10px;
+  }
+}
 #outils #menu-outils .left-bar-outils ul li:last-of-type {
   border-radius: 0 0 10px 10px;
+}
+@media screen and (max-width: 850px) {
+  #outils #menu-outils .left-bar-outils ul li:last-of-type {
+    border-radius: 0 10px 10px 0;
+  }
 }
 #outils #menu-outils .left-bar-outils ul li:hover {
   background: linear-gradient(135deg, #b80000, #8b0000);
@@ -1633,6 +1763,39 @@ footer .footer-copyright .heart {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 20px;
+}
+@media screen and (max-width: 810px) {
+  #outils #menu-outils .outils-container #tous-les-outils .container-docs,
+  #outils #menu-outils .outils-container #outils-syndicaux .container-docs,
+  #outils #menu-outils .outils-container #fiches-infos .container-docs,
+  #outils #menu-outils .outils-container #affiches .container-docs,
+  #outils #menu-outils .outils-container #dossiers .container-docs,
+  #outils #menu-outils .outils-container #tracts .container-docs,
+  #outils #menu-outils .outils-container #les-essentiels .container-docs {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 590px) {
+  #outils #menu-outils .outils-container #tous-les-outils .container-docs,
+  #outils #menu-outils .outils-container #outils-syndicaux .container-docs,
+  #outils #menu-outils .outils-container #fiches-infos .container-docs,
+  #outils #menu-outils .outils-container #affiches .container-docs,
+  #outils #menu-outils .outils-container #dossiers .container-docs,
+  #outils #menu-outils .outils-container #tracts .container-docs,
+  #outils #menu-outils .outils-container #les-essentiels .container-docs {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 500px) {
+  #outils #menu-outils .outils-container #tous-les-outils .container-docs,
+  #outils #menu-outils .outils-container #outils-syndicaux .container-docs,
+  #outils #menu-outils .outils-container #fiches-infos .container-docs,
+  #outils #menu-outils .outils-container #affiches .container-docs,
+  #outils #menu-outils .outils-container #dossiers .container-docs,
+  #outils #menu-outils .outils-container #tracts .container-docs,
+  #outils #menu-outils .outils-container #les-essentiels .container-docs {
+    grid-template-columns: 1fr;
+  }
 }
 #outils #menu-outils .outils-container #tous-les-outils .container-docs a,
 #outils #menu-outils .outils-container #outils-syndicaux .container-docs a,
@@ -1759,6 +1922,16 @@ footer .footer-copyright .heart {
   padding: 0 50px 70px;
   gap: 20px;
 }
+@media screen and (max-width: 1010px) {
+  #nous-contacter #infos-contact {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 665px) {
+  #nous-contacter #infos-contact {
+    grid-template-columns: 1fr;
+  }
+}
 #nous-contacter #infos-contact h2 {
   color: #8b0000;
   margin-bottom: 30px;
@@ -1883,6 +2056,11 @@ footer .footer-copyright .heart {
           align-items: center;
   gap: 20px;
 }
+@media screen and (max-width: 555px) {
+  #je-souhaite-adherer .section .selection-container {
+    grid-template-columns: 1fr;
+  }
+}
 #je-souhaite-adherer .section .selection-container a .selection-item {
   background: url(../img/hero.webp) center/cover;
   height: 250px;
@@ -1955,6 +2133,11 @@ footer .footer-copyright .heart {
       -ms-flex-align: center;
           align-items: center;
 }
+@media screen and (max-width: 555px) {
+  #adhesion .adhesion-form form div {
+    display: block;
+  }
+}
 #adhesion .adhesion-form form div input {
   padding: 5px 10px;
   margin: 0 5px;
@@ -1977,7 +2160,18 @@ footer .footer-copyright .heart {
 #adhesion .adhesion-form form input[type=checkbox] {
   width: auto;
 }
+@media screen and (max-width: 555px) {
+  #adhesion .adhesion-form form input[type=checkbox] {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
 #adhesion .adhesion-form form p {
   display: block;
   margin-left: 10px;
+}
+@media screen and (max-width: 555px) {
+  #adhesion .adhesion-form form p {
+    text-align: center;
+  }
 }/*# sourceMappingURL=index.css.map */
