--- a/assets/css/pages/_adhesion.scss
+++ b/assets/css/pages/_adhesion.scss
@@ -14,6 +14,10 @@
       align-items: center;
       gap: 20px;
 
+      @media screen and (max-width: 555px) {
+        grid-template-columns: 1fr;
+      }
+
       a {
         .selection-item {
           background: url(../img/hero.webp) center/cover;
@@ -71,6 +75,10 @@
         justify-content: start;
         align-items: center;
 
+        @media screen and (max-width: 555px) {
+          display: block;
+        }
+
         input {
           padding: 5px 10px;
           margin: 0 5px;
@@ -92,14 +100,25 @@
       button {
         margin-top: 30px;
         cursor: url(../img/cursor-hover.ico), pointer;
+        @media screen and (max-width: 555px) {
+        }
       }
 
       input[type="checkbox"] {
         width: auto;
+
+        @media screen and (max-width: 555px) {
+          width: 100%;
+          margin-bottom: 10px;
+        }
       }
       p {
         display: block;
         margin-left: 10px;
+
+        @media screen and (max-width: 555px) {
+          text-align: center;
+        }
       }
     }
   }
