--- a/assets/css/pages/_vos-droits.scss
+++ b/assets/css/pages/_vos-droits.scss
@@ -55,6 +55,14 @@
         gap: 20px;
         margin-top: 30px;
 
+        @media screen and (max-width: 1000px) {
+          grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media screen and (max-width: 630px) {
+          grid-template-columns: 1fr;
+        }
+
         .droit {
           padding: 20px;
           border: 3px solid $white;
@@ -83,6 +91,10 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 20px;
+
+      @media screen and (max-width: 1000px) {
+        grid-template-columns: 1fr;
+      }
 
       .protection {
         border: 3px solid $color1;
@@ -156,6 +168,10 @@
         gap: 50px;
         margin-top: 30px;
 
+        @media screen and (max-width: 1000px) {
+          grid-template-columns: 1fr;
+        }
+
         .formation-item {
           padding: 20px;
           border: 3px solid $white;
@@ -166,8 +182,16 @@
           justify-content: center;
           align-items: center;
 
+          @media screen and (max-width: 1000px) {
+            width: 100%;
+          }
+
           &:first-of-type {
             margin-left: 30px;
+
+            @media screen and (max-width: 1000px) {
+              margin: 0;
+            }
           }
 
           i {
@@ -202,6 +226,10 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 20px;
+
+      @media screen and (max-width: 1000px) {
+        grid-template-columns: 1fr;
+      }
 
       .soutien {
         border: 3px solid $color1;
