--- a/assets/css/pages/_adhesion.scss
+++ b/assets/css/pages/_adhesion.scss
@@ -69,6 +69,10 @@
       padding: 50px;
       box-shadow: 0 0 5px $blackShadow;
 
+      @media screen and (max-width: 555px) {
+        text-align: center;
+      }
+
       div {
         display: flex;
         margin: 10px 0;
@@ -76,7 +80,8 @@
         align-items: center;
 
         @media screen and (max-width: 555px) {
-          display: block;
+          flex-direction: column;
+          justify-content: center;
         }
 
         input {
@@ -101,6 +106,7 @@
         margin-top: 30px;
         cursor: url(../img/cursor-hover.ico), pointer;
         @media screen and (max-width: 555px) {
+          margin: 30px auto;
         }
       }
 
