--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -54,7 +54,8 @@
   height: 100vh;
   padding: 120px 50px 50px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  // grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   justify-content: center;
   align-items: center;
