--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -12,3 +12,4 @@
 @import "./pages/faq";
 @import "./pages/nous-contacter";
 @import "./pages/adhesion";
+@import "./pages/avantages-de-mon-adhesion";
